--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,31 @@
-
+<div class="container text-left">
+  <div class="row">
+    <div class="col-sm-3">
+    </div>
+    <div class="col-sm-6">
+      <% @posts.each do |p| %>
+        <h3><%= link_to p.title, post_path(p), style: "text-decoration:underline;color:grey" %></h3>
+        <% unless p.main_picture.nil? %>
+          <%= image_tag p.main_picture, class: "img-fluid" %>
+        <% end %>
+        <%= p.body.truncate(150) %>
+        <%= link_to "More...", post_path(p) %>
+        <hr>
+        <br>
+      <% end %>
+      <div class="nav">
+        <div class="navbar-nav mr-auto">
+          <%= link_to "First", posts_path(page: 1), style: "color:grey" %>
+        </div>
+          <%= link_to_previous_page @posts, "Previous", style: "color:grey" %>
+          &nbsp
+          |
+          &nbsp
+          <%= link_to_next_page @posts, "Next", style: "color:grey" %>
+        <div class="navbar-nav ml-auto">
+          <%= link_to "Last", posts_path(page: @lastPageNum), style: "color:grey" %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
