--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,2 +1,6 @@
-<h1>Posts#show</h1>
-<p>Find me in app/views/posts/show.html.erb</p>
+<div class="container text-center">
+  <h3><%= @post.title %></h3>
+  <%= image_tag @post.main_picture, class: "img-fluid" %>
+  <hr>
+  <%= @post.body %>
+</div>
