--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,14 @@
         <%= link_to "Index", posts_path, class: "navbar-brand" %>
       </ul>
       <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <%= link_to "Portfolio", portfolio_posts_path, class: "nav-link btn btn-sm btn-secondary" %>
+        </li>
+        &nbsp
+        <li class="nav-item">
+          <%= link_to "Catalog",catalog_path, class: "nav-link btn btn-sm btn-secondary" %>
+        </li>
+        &nbsp
         <% if user_signed_in? %>
           <li class="nav-item">
             <%= link_to "Create Post", new_post_path, class: "nav-link btn btn-sm btn-secondary" %>
@@ -43,5 +51,8 @@
       </div>
     <% end %>
     <%= yield %>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
 </html>
