--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang=en>
   <head>
     <title>Portfolio</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
@@ -11,34 +13,29 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
     <!-- Navbar -->
-    <div class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="navbar navbar-expand-sm navbar-dark bg-dark">
+      <div class="container">
       <ul class="navbar-nav mr-auto">
-        <%= link_to "Index", posts_path, class: "navbar-brand" %>
+        <%= link_to "Home", posts_path, class: "navbar-brand" %>
       </ul>
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <%= link_to "Portfolio", portfolio_posts_path, class: "nav-link btn btn-sm btn-secondary" %>
+        <li class="nav-item dropdown">
+          <%= link_to "Menu", posts_path, class: "nav-link dropdown-toggle", id: "navbarDropdownMenu", 'data-toggle': "dropdown", 'aria-haspopup': true, 'aria-expanded': false %>
+
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenu">
+            <%= link_to "Portfolio", portfolio_posts_path(page: 1), class: "dropdown-item" %>
+            <%= link_to "Catalog",catalog_path, class: "dropdown-item" %>
+            <% if user_signed_in? %>
+                <%= link_to "Create Post", new_post_path, class: "dropdown-item" %>
+                <%= link_to "Sign Out", destroy_user_session_path(), method: :delete, class: "dropdown-item" %>
+            <% end %>
+            <% if !user_signed_in? %>
+                <%= link_to "Sign In", new_user_session_path, class: "dropdown-item" %>
+            <% end %>
+          </div>
         </li>
-        &nbsp
-        <li class="nav-item">
-          <%= link_to "Catalog",catalog_path, class: "nav-link btn btn-sm btn-secondary" %>
-        </li>
-        &nbsp
-        <% if user_signed_in? %>
-          <li class="nav-item">
-            <%= link_to "Create Post", new_post_path, class: "nav-link btn btn-sm btn-secondary" %>
-          </li>
-          &nbsp
-          <li class="nav-item">
-            <%= link_to "Sign Out", destroy_user_session_path(), method: :delete, class: "nav-link btn btn-sm btn-secondary" %>
-          </li>
-        <% end %>
-        <% if !user_signed_in? %>
-          <li class="nav-item">
-            <%= link_to "Sign In", new_user_session_path, class: "nav-link ml-auto btn btn-sm btn-secondary" %>
-          </li
-        <% end %>
       </ul>
+    </div>
     </div>
   </head>
 
@@ -53,6 +50,5 @@
     <%= yield %>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
 </html>
