--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container text-left">
   <div class="row">
-    <div class="col-sm-3">
+    <div class="col-lg-3">
     </div>
-    <div class="col-sm-6">
+    <div class="col-sm-12 col-lg-6">
       <% @posts.each do |p| %>
         <h3><%= link_to p.title, post_path(p), style: "text-decoration:underline;color:grey" %></h3>
         <% unless p.main_picture.nil? %>
