File upload progress bars

--- a/app/views/portfolio_posts/new.html.erb
+++ b/app/views/portfolio_posts/new.html.erb
@@ -1,12 +1,21 @@
-<% if @portfolioPost.errors.any? %>
-  <ul>
-  <% @portfolioPost.errors.full_messages.each do |e| %>
-    <li class="text-danger"><%= e %></li>
-    <% end %>
-  </ul>
-<% end %>
-<%= form_for @portfolioPost, url: {action: "create"} do |f| %>
-  <%= f.file_field :pictures, multiple: true %>
-  <%= f.hidden_field :title, value: "niggerdicks" %>
-  <%= f.submit "Upload" %>
-<% end %>
+  <div class="row">
+    <div class="col-sm-4">
+    </div>
+    <div class="col-sm-4">
+      <% if @portfolioPost.errors.any? %>
+        <ul>
+        <% @portfolioPost.errors.full_messages.each do |e| %>
+          <li class="text-danger"><%= e %></li>
+          <% end %>
+        </ul>
+      <% end %>
+      <hr>
+      <%= form_for @portfolioPost, url: {action: "create"} do |f| %>
+        <%= f.file_field :pictures, multiple: true, direct_upload: true %>
+        <%= f.hidden_field :title, value: "portfolio_post" %>
+        <hr>
+        <%= f.submit "Upload" %>
+      <% end %>
+    </div>
+  </div>
+</div>
