--- a/app/views/portfolio_posts/index.html.erb
+++ b/app/views/portfolio_posts/index.html.erb
@@ -1,5 +1,12 @@
 <div class="row">
   <div class="col-lg-2">
+    <% if user_operator_or_admin? %>
+      <% if params[:edit] == "true" %>
+        <%= link_to "Stop Editing", portfolio_posts_path(page: params[:page]), class: "edit-header btn btn-md btn-secondary" %>
+      <% else %>
+        <%= link_to "Edit Mode", portfolio_posts_path(edit: true, page: params[:page]), class: "edit-header btn btn-md btn-secondary" %>
+      <% end %>
+    <% end %>
   </div>
   <div class="col-lg-8">
     <div class="row">
@@ -61,15 +68,5 @@
     </div>
   </div>
   <div class="col-lg-2">
-    <% if user_signed_in? %>
-      <%= link_to "Upload some stuff", new_portfolio_post_path, class: "btn btn-lg btn-secondary"  %>
-      <br>
-      <br>
-      <% if params[:edit] == "true" %>
-        <%= link_to "Stop Editing", portfolio_posts_path(page: params[:page]), class: "btn btn-lg btn-secondary" %>
-      <% else %>
-        <%= link_to "Edit Mode", portfolio_posts_path(edit: true, page: params[:page]), class: "btn btn-lg btn-secondary"  %>
-      <% end %>
-    <% end %>
   </div>
 </div>
