--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,9 +2,7 @@
   <div class="row">
     <div class="col-lg-3">
       <% if user_operator_or_admin? %>
-        <%= link_to "Create Post", new_post_path, class: "edit-header btn btn-md btn-secondary" %>
-        <br>
-        <br>
+        <%= link_to "Create Post", new_post_path, class: "create-post-button edit-header btn btn-md btn-secondary" %>
       <% end %>
       <h4> Pinned <h4>
         <hr>
