--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -15,7 +15,7 @@
     <br>
     <%= f.text_area :body, rows: "15", class: "form-control rounded-20", placeholder: "Body..." %>
     <br>
-    <%= f.file_field :main_picture %>
+    <%= f.file_field :main_picture, direct_upload: true %>
     <hr>
     <%= f.submit :Update %>
     <%= f.check_box :pinned, class: "checkbox" %>
