--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,18 +34,18 @@
             <li class="nav-item">
               <%= link_to "Portfolio", portfolio_posts_path(page: 1), class: "nav-link" %>
             </li>
-            <li class="nav-item dropdown">
-              <%= link_to "Profile", posts_path, class: "nav-link dropdown-toggle", id: "navbarDropdownMenu", 'data-toggle': "dropdown", 'aria-haspopup': true, 'aria-expanded': false %>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenu">
-                <% if user_signed_in? %>
-                  <%= link_to "Edit Profile", edit_user_registration_path, class: "dropdown-item" %>
-                  <%= link_to "Sign Out", destroy_user_session_path(), method: :delete, class: "dropdown-item" %>
-                <% end %>
-                <% if !user_signed_in? %>
-                    <%= link_to "Sign In", new_user_session_path, class: "dropdown-item" %>
-                <% end %>
-              </div>
-            </li>
+            <% if user_signed_in? %>
+              <li class="nav-item">
+                <%= link_to "[Edit Password]", edit_user_registration_path, class: "nav-link" %>
+              </li>
+              <li class="nav-item">
+                <%= link_to "[Logout]", destroy_user_session_path, method: "delete", class: "nav-link" %>
+              </li>
+              <% else %>
+                <li class="nav-item">
+                  <%= link_to "[Login]", new_user_session_path, class: "nav-link" %>
+                </li>
+            <% end %>
           </ul>
         </div>
       </div>
