--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -14,6 +14,8 @@
       <% end %>
     </div>
     <div class="col-sm-12 col-lg-6">
+
+      <!--
       <% unless @posts.empty? %>
         <% @posts.each do |p| %>
           <h3><%= link_to p.title, post_path(p), class: "posts" %></h3>
@@ -27,17 +29,15 @@
           <br>
         <% end %>
       <% end %>
-      <div class="nav">
-        <div class="navbar-nav mr-auto">
-          <%= link_to "First", posts_path(page: 1), style: "color:grey" %>
-        </div>
-          <%= link_to_previous_page @posts, "Previous", style: "color:grey" %>
-          &nbsp
-          &nbsp
-          <%= link_to_next_page @posts, "Next", style: "color:grey" %>
-        <div class="navbar-nav ml-auto">
-          <%= link_to "Last", posts_path(page: @lastPageNum), style: "color:grey" %>
-        </div>
+    -->
+      <div id="blog-posts">
+        <%= render @posts %>
+      </div>
+
+      <div id="infinite-scrolling">
+        <%= will_paginate @posts %>
+      </div>
+      <div id="result">
       </div>
     </div>
   </div>
