--- a/app/views/portfolio_posts/show.html.erb
+++ b/app/views/portfolio_posts/show.html.erb
@@ -1,2 +1,5 @@
-<h1>PortfolioPosts#show</h1>
-<p>Find me in app/views/portfolio_posts/show.html.erb</p>
+<div class="container text-center">
+  <div class="col-sm-12">
+    <%= link_to image_tag(@picture, class: "img-fluid"), url_for(@picture) %>
+  </div>
+</div>
