--- a/app/assets/stylesheets/portfolio_posts.scss
+++ b/app/assets/stylesheets/portfolio_posts.scss
@@ -24,6 +24,7 @@
   border-style: solid;
   border-color: grey;
   border-width: 5px;
+  margin: 5px;
 }
 
 .container .portfolio-image:hover .delete {
