--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,12 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <script src="/assets/jquery.js" type="text/javascript"></script>
-    <script src="/assets/jquery_ujs.js" type="text/javascript"></script>
-
+    <!--<script src="/assets/jquery_ujs.js" type="text/javascript"></script> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
 
     <!-- Navbar -->
     <div class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
@@ -35,7 +34,7 @@
               <%= link_to "Catalog",catalog_path, class: "nav-link" %>
             </li>
             <li class="nav-item">
-              <%= link_to "Portfolio", portfolio_posts_path(page: 1), class: "nav-link" %>
+              <%= link_to "Portfolio", portfolio_posts_path, class: "nav-link" %>
             </li>
             <% if user_signed_in? %>
               <li class="nav-item">
@@ -72,7 +71,10 @@
       </div>
     <% end %>
     <%= yield %>
+
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <!-- why the hell does this fix jquery not loading without hard reload? should be in the <head> -->
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </body>
 </html>
