--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,23 +1,44 @@
 <div class="container text-left">
   <div class="row">
+    <div id="toggle-tags-link">
+      <h4 class="toggle-tags-link"> Tags </h4>
+    </div>
+    <div style="width:100%"></div>
+    <% if @filterOn %>
+      <%= link_to "Clear Tags", posts_path, class: "clear-tags-link" %>
+      <div style="width:100%"></div>
+      <%= "Showing Tag:" %> <%= link_to " ##{params[:filtertag]}", posts_path(filtertag: params[:filtertag]), class: "selected-tag-links" %>
+      <div style="width:100%"></div>
+    <% end %>
+    <div class="tag-links-area">
+      <% @tags.each do |t| %>
+        <%= link_to "##{t}", posts_path(filtertag: t), class: "tag-links" %>
+      <% end %>
+    </div>
+    <hr style="width: 100%">
+  </div>
+  <div class="row">
     <div class="col-lg-3">
       <% if user_operator_or_admin? %>
         <%= link_to "Write Post", new_post_path, class: "create-post-button edit-header btn btn-md btn-secondary" %>
       <% end %>
-      <h4> Pinned <h4>
-        <hr>
-      <% unless @pinnedPosts.empty? %>
-        <% @pinnedPosts.each do |p| %>
-          <%= link_to p.title, post_path(p),class: "pinned-posts" %>
-          <hr>
+      <div id="toggle-pinned-link">
+      <h4 class="toggle-pinned-link"> Pinned <h4>
+      </div>
+      <hr>
+      <div class="pinned-posts-area">
+        <% unless @pinnedPosts.empty? %>
+          <% @pinnedPosts.each do |p| %>
+            <%= link_to p.title, post_path(p),class: "pinned-posts" %>
+            <hr>
+          <% end %>
         <% end %>
-      <% end %>
+      </div>
     </div>
     <div class="col-sm-12 col-lg-6">
       <div id="blog-posts">
         <%= render @posts %>
       </div>
-
       <div id="infinite-scrolling">
         <%= will_paginate @posts %>
       </div>
